# python-email-job-extractor

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alternating_timeline_cv.docx  cert_builder.py  certs.txt  convert_to_list.py  experiece_builder.py  format_education.py  format_experience.py  justfile  main.py  project_builder.py  pyproject.toml  requirements.txt  resume.docx  sample_resume.json
argocd/: application.yaml  project.yaml
docs/: architecture.md  cli.md  configuration.md  troubleshooting.md
examples/: filter_rules.json  questionnaire.json  sample_resume.json
k8s/: README.md  configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service.yaml
personal_info/: sergio_david_munoz_sierra.py
resume_builder/: pyproject.toml
resume_builder/src/resume_builder/: __init__.py  __main__.py  cert_builder.py  cli.py  convert_to_list.py  education_builder.py  experiece_builder.py  format_education.py  format_experience.py  person_builder.py  project_builder.py  schema_adapter.py  skill.py
resume_builder/src/resume_builder/formatting/: __init__.py  timeline.py  timeline_2.py  timeline_3.py
resume_builder/src/resume_builder/personal_info/: __init__.py
src/: __init__.py  education_builder.py  person_builder.py  schema_adapter.py
src/email_opportunity_pipeline/: __init__.py  analytics.py  cli.py  config.py  io.py  models.py  pipeline.py  threading_utils.py  time_window.py
src/email_opportunity_pipeline/correlation/: __init__.py  correlator.py  models.py  report.py
src/formatting/: timeline.py  timeline_3.py
src/resume_builder/: cert_builder.py  cli.py  document_styles.py  education_builder.py  format_experience.py  project_builder.py  schema_adapter.py
tests/: test_correlation.py  test_email_recipient_and_audit.py  test_threading_utils.py  test_tracking.py
(+48 files in other folders)
