[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-builder"
version = "0.1.0"
description = "Generate .docx resumes from a JSON schema or legacy Python data."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "lxml>=4.9.2",
    "python-docx>=0.8.11",
]

[project.scripts]
resume-builder = "resume_builder.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
